--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,107 +2,56 @@ name: Release CI
 
 on:
   push:
-    branches: [master]
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'release: major|minor|patch'
-        required: true
-        default: patch
+    branches: [main]
+
+permissions:
+  contents: read
+  pull-requests: read
+  packages: write
 
 jobs:
   release:
     runs-on: ubuntu-latest
     name: release
 
-    container:
-      image: ghcr.io/synthetixio/docker-node/ubuntu:16.14
-      credentials:
-        username: synthetixio
-        password: ${{ secrets.GH_PACKAGES_READ_ONLY }}
-
     steps:
       - name: Checkout
-        uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846 # pin@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: master
+          ref: main
 
-      - name: Set npm cache directory
-        run: npm config set cache .npm-cache --global
-        continue-on-error: true
-
-      - uses: actions/cache@136d96b4aee02b1f0de3ba493b1d47135042d9c0 # pin@v2
+      - uses: actions/cache@v3
         with:
           path: |
-            .npm-cache
+            ~/.npm
             node_modules
-          key: ${{ runner.os }}-ubuntu-node-16-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-16-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-ubuntu-node-16-
-        continue-on-error: true
+            ${{ runner.os }}-node-16-
 
-      # fixes permission issues on docker+npm@7
-      - name: Chown workspace
-        run: chown -R $(whoami) .
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 16
+          registry-url: https://npm.pkg.github.com/
+          scope: '@josepmc'
 
       - name: Install dependencies
-        run: npm install --legacy-peer-deps --prefer-offline --no-audit
-
-      - name: git config
-        run: |
-          git config user.name $GIT_USER
-          git config user.email $GIT_EMAIL
-          mkdir -p ~/.gnupg/
-          printf $GPG_KEY | base64 -d > ~/.gnupg/private.key
-          gpg --import ~/.gnupg/private.key
-          git config commit.gpgsign true
-          git config user.signingkey $GIT_SIGNING_KEY
-        env:
-          GIT_USER: ${{ secrets.GIT_USER }}
-          GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
-          GPG_KEY: ${{ secrets.GPG_KEY }}
-          GIT_SIGNING_KEY: ${{ secrets.GIT_SIGNING_KEY }}
+        run: npm ci --legacy-peer-deps --prefer-offline --no-audit
 
       - name: npm config
-        run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: echo "registry=https://npm.pkg.github.com/@josepmc" >> .npmrc
 
-      - name: Set current npm package version
-        id: extract-version
+      - name: Release
         run: |
-          PACKAGE_VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')
-          echo ::set-output name=current-version::$PACKAGE_VERSION
-
-      - name: Release ${{ github.event.inputs.version }}
-        if: github.event_name == 'workflow_dispatch'
-        run: |
-          git reset --hard
-          npm run release:${{ github.event.inputs.version }} -- --ci
+          npm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version
+      - run: npm pack
+      - run: npm publish $(ls josepmc-synpress-*.tgz)
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GIT_USER: ${{ secrets.GIT_USER }}
-          GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
-          GPG_KEY: ${{ secrets.GPG_KEY }}
-          GIT_SIGNING_KEY: ${{ secrets.GIT_SIGNING_KEY }}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-      - name: Release patch:beta
-        if: github.event_name == 'push'
-        run: |
-          git reset --hard
-
-          echo ${{ steps.extract-version.outputs.current-version }}
-          if echo ${{ steps.extract-version.outputs.current-version }} | grep -q "beta"; then
-            npm run release -- --ci --preRelease
-          else
-            npm run release:patch -- --ci --preRelease=beta
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GIT_USER: ${{ secrets.GIT_USER }}
-          GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
-          GPG_KEY: ${{ secrets.GPG_KEY }}
-          GIT_SIGNING_KEY: ${{ secrets.GIT_SIGNING_KEY }}
+      - uses: actions/delete-package-versions@v3
+        with:
+          package-name: '@josepmc/synpress'
+          min-versions-to-keep: 10
+          delete-only-pre-release-versions: 'true'
