--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@synthetixio/synpress",
-  "version": "1.2.0",
+  "name": "@josepmc/synpress",
+  "version": "1.2.0-josepmc",
   "description": "Synpress in an wrapper around Cypress test runner which extends its capabilities with conjunction of Puppeteer. It's used used across Synthetix projects.",
   "keywords": [
     "Synpress",
@@ -9,13 +9,13 @@
     "testing",
     "e2e"
   ],
-  "homepage": "https://github.com/synthetixio/synpress#readme",
+  "homepage": "https://github.com/josepmc/synpress#readme",
   "bugs": {
-    "url": "https://github.com/synthetixio/synpress/issues"
+    "url": "https://github.com/josepmc/synpress/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/synthetixio/synpress.git"
+    "url": "git+https://github.com/josepmc/synpress.git"
   },
   "license": "MIT",
   "author": {
@@ -28,16 +28,11 @@
   },
   "scripts": {
     "fix": "npm run fix:eslint && npm run fix:prettier",
-    "fix:eslint": "eslint --fix **/*.js",
+    "fix:eslint": "eslint --config .eslintrc.js --ignore-path .eslintignore --fix \"**/*.js\"",
     "fix:prettier": "prettier --write **/*.js",
     "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:eslint": "eslint . --ext js",
+    "lint:eslint": "eslint --config .eslintrc.js --ignore-path .eslintignore \"**/*.js\"",
     "lint:prettier": "prettier --check **/*.js",
-    "lint:sarif": "node lint.js . --ext js",
-    "release": "release-it --disable-metrics",
-    "release:major": "release-it major --disable-metrics",
-    "release:minor": "release-it minor --disable-metrics",
-    "release:patch": "release-it patch --disable-metrics",
     "update:deps": "ncu -u -x 'node-fetch eslint' && npm install --legacy-peer-deps",
     "start:server": "serve tests/test-dapp -p 3000",
     "test:e2e": "start-server-and-test 'npm run start:server' http-get://localhost:3000 'SYNPRESS_LOCAL_TEST=true node synpress.js run --configFile=tests/e2e/config.json'",
@@ -77,23 +72,22 @@
     "eslint-plugin-testing-library": "5.2.1",
     "eslint-plugin-ui-testing": "2.0.1",
     "eslint-plugin-unicorn": "42.0.0",
-    "etherscan-api": "10.0.5",
-    "node-fetch": "2.6.1",
+    "etherscan-api": "^10.2.0",
+    "node-fetch": "^2.4.1",
     "prettier": "2.6.2",
     "puppeteer-core": "13.5.2",
     "serve": "13.0.2",
     "start-server-and-test": "1.14.0",
-    "synthetix-js": "2.66.2"
+    "synthetix-js": "^2.4.1"
   },
   "devDependencies": {
-    "@microsoft/eslint-formatter-sarif": "2.1.7",
-    "npm-check-updates": "12.5.8",
-    "release-it": "14.14.0"
+    "npm-check-updates": "^16.3.4"
   },
   "engines": {
     "node": ">=10"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "restricted",
+    "registry": "https://npm.pkg.github.com/"
   }
 }
